@@ -1350,4 +1350,11 @@
 	  around dns_getserver() and dns_setserver() to isolate application
 	  code from changes to those interfaces (2015-07-12).
 	* apps/nshlib:  Add an nslookup command (2015-07-13).
+	* apps/examples/nxlines:  If CONFIG_NX_ANTIALIASING=y, then the nxlines
+	  example now erases a line that is 2 pixels longer and 2 pixels wideri
+	  than the line it drew.  That eliminates edges effects due to applying
+	  the anti-aliasing algorithm twice.  A better solution would be to makei
+	  anti-aliasing an option for each graphics call so you would rend the
+	  line with anti-aliasing ON and clear it with anti-aliasing OFF. but I
+	  don't have the wherewithal for that change today (2015-04-14)`.
 
